[gd_scene load_steps=9 format=3 uid="uid://bqy8gre176sye"]

[ext_resource type="Script" uid="uid://bvul3a5jcl6ta" path="res://scripts/slime.gd" id="1_n6pvg"]
[ext_resource type="Texture2D" uid="uid://blutefnpvati2" path="res://assets/sprites/slime_green.png" id="1_ysqjb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ma888"]
atlas = ExtResource("1_ysqjb")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4pri"]
atlas = ExtResource("1_ysqjb")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8212k"]
atlas = ExtResource("1_ysqjb")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kysl"]
atlas = ExtResource("1_ysqjb")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ey3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma888")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4pri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8212k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kysl")
}],
"loop": true,
"name": &"aggressive_idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2gj0"]
size = Vector2(14, 12)

[node name="Slime" type="Node2D"]
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1ey3r")
animation = &"aggressive_idle"
autoplay = "aggressive_idle"
frame_progress = 0.817681

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(11, 0)

[node name="minushealthzone" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="minushealthzone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_p2gj0")

[node name="Timer" type="Timer" parent="minushealthzone"]

[connection signal="body_entered" from="minushealthzone" to="." method="_on_minushealthzone_body_entered"]
[connection signal="timeout" from="minushealthzone/Timer" to="." method="_on_timer_timeout"]
